--- a/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/css/styles.css
+++ b/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/css/styles.css
@@ -65,15 +65,65 @@
 /**********************************/
 /* 1. Estilos gerais
 /**********************************/
+html{
+    font-size: 
+    62.5%;
+    font-family: var(--ff);
+    color: var(--clr-font);
+    transition: var(--transition);
+}
+body{
+    background-color: var(--clr-background);
+    transition: var(--transition);
 
-
+}
 
 /**********************************/
 /* 2. Navbar
 /**********************************/
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--clr-card) ;
+    transform: var(--transition);
+    min-height: 8.5rem;
+    padding: 1.6rem;
+    box-shadow: var(--shadow-card);
+}
 
+.logo{
+    fill: var(--clr-font);
+    transition: var(--transition);
+}
+.switch{
+    display: flex;
+    align-items: center;
+}
+.switch_track{
+    background-color: var(--clr-switch-track);
+    display: block;
+    height: 2rem;
+    width: 4rem;
+    border-radius: 1rem;
+    cursor: pointer;
+    margin: 0 .2rem;
+}
+.switch_track::before{
+    content: "";
+    background-color: var(--clr-font);
+    transition: var(--transition);
+    display: block;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 1rem;
+    position: relative;
+    left: 0;
 
+}
+.switch_track--dark::before{
 
+}
 /**********************************/
 /* 3. Loading
 /**********************************/
