--- a/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/css/styles.css
+++ b/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/css/styles.css
@@ -127,8 +127,31 @@ body{
 /**********************************/
 /* 3. Loading
 /**********************************/
+.loading{
+    position: fixed;
+    background-color: var(--clr-background);
+    transition: var(--transition);
+    height: 100vh;
+    width: 100vw;
+    font-size: 4.8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+}
+.loading_spinner{
+    animation: spin 2s infinite linear;
+}
+@keyframes spin{
+    to{
+        transform: rotate(360deg);
+    }
+}
 
-
+.loading--hide{
+    visibility: hidden;
+    opacity: 0;
+}
 
 /**********************************/
 /* 4. Container
