--- a/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/css/styles.css
+++ b/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/css/styles.css
@@ -156,15 +156,55 @@ body{
 /**********************************/
 /* 4. Container
 /**********************************/
-
+.container{
+    display: grid;
+    grid-template-columns: auto;
+    grid-gap: 30px;
+    margin: 3rem 1.6rem;
+}
 
 
 /**********************************/
 /* 5. State Select
 /**********************************/
+.state-select{
+    font: var(--ts-normal-semibold);
+    background-color: var(--clr-card);
+    color: var(--clr-font);
+    transition: 
+    var(--transition);
+    box-shadow: var(--shadow-card);
+    border-radius: 1rem;
+    position: relative;
+}
 
+.state-select-toggle{
+    display: flex;
+    padding: 1.6rem;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+}
 
+.state-select-toggle__icon{
+    transition: var(--transition);
+}
 
+.state-select-toggle__icon--rotate{
+    transform: rotate(-180deg);
+}
+.state-select-list{
+    max-height: 30rem;
+    overflow-y: scroll;
+    border-radius: 1rem;
+    padding: 1.6rem ;
+    position: absolute;
+    width: 100%;
+    background-color: var(--clr-card);
+    transition: var(--transition);
+    box-shadow: var(--shadow-card);
+    top: calc(100%);
+}
 /**********************************/
 /* 6. Status
 /**********************************/
