--- a/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/css/styles.css
+++ b/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/css/styles.css
@@ -203,8 +203,50 @@ body{
     background-color: var(--clr-card);
     transition: var(--transition);
     box-shadow: var(--shadow-card);
-    top: calc(100%);
+    top: calc(100% + 1.5rem);
+    visibility: hidden;
+    opacity: 0;
+    
+
 }
+
+.state-select-list--show{
+    visibility: visible;
+    opacity: 1;
+    top: calc(100% + .75rem);
+}
+
+.state-select-list--search{
+    width: 100%;
+    padding: 1.6rem;
+    color: var(--clr-font);
+    border-radius: 1rem;
+    border: none;
+    background-color: var(--clr-background);
+    transition: var(--transition);
+}
+.state-select-list--search::placeholder{
+    background-color: var(--clr-background);
+    color: var(--clr-font);
+    opacity: .6;
+    transition: var(--transition);
+
+}
+
+.state-select-list__item{
+    cursor: pointer;
+    color: var(--clr-link);
+    padding: 1.6rem;
+}
+.state-select-list__item:hover{
+    color: var(--clr-card);
+    background-color: var(--clr-link);
+}
+
+.state-select-list__item--hide{
+    display: none;
+}
+
 /**********************************/
 /* 6. Status
 /**********************************/
