--- a/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/css/styles.css
+++ b/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/css/styles.css
@@ -85,6 +85,22 @@ section{
     border-radius: 1rem;
 }
 
+footer{
+    background-color: var(--clr-card);
+    transition: var(--transition);
+    font: var(--ts-normal-semibold);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 19rem;
+    text-align: center;
+}
+
+a{
+    color: var(--clr-link);
+    text-decoration: none;
+    transition: var(--transition);
+}
 /**********************************/
 /* 2. Navbar
 /**********************************/
@@ -292,10 +308,20 @@ section{
 /**********************************/
 /* 7. Data Box
 /**********************************/
+.data-box--header{
+    font: var(--ts-caption);
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+}
 
-
+.data-box--description{
+    font: var(--ts-normal-text);
+}
 
 /**********************************/
 /* 8. Footer
 /**********************************/
 
+.footer-text__source{
+    margin-bottom: 3.2rem;
+}
