--- a/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/css/styles.css
+++ b/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/css/styles.css
@@ -186,6 +186,17 @@ a{
     margin: 3rem 1.6rem;
 }
 
+@media screen and (min-width: 960px) {
+    .container{
+        grid-template-columns: repeat(2, 1fr); 
+    }
+}
+
+@media screen and (min-width: 1170px){
+    .container{
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
 
 /**********************************/
 /* 5. State Select
@@ -270,6 +281,18 @@ a{
     display: none;
 }
 
+@media screen and (min-width: 960px){
+    .state-select{
+        grid-column: 1/-1; /*abrivação de grid start e grid end, basicamente faz o item ocupar todo o espaço horizontal*/
+    }
+}
+
+
+@media screen and (min-width: 1170px){
+    .state-select{
+        grid-column: 1;
+    }
+}
 /**********************************/
 /* 6. Status
 /**********************************/
@@ -305,6 +328,12 @@ a{
     transition: var(--transition);
 }
 
+@media screen and (min-width: 1170px){
+    .status:nth-of-type(1){
+        grid-column: 1;
+    }
+}
+
 /**********************************/
 /* 7. Data Box
 /**********************************/
@@ -316,6 +345,22 @@ a{
 
 .data-box--description{
     font: var(--ts-normal-text);
+}
+
+@media screen and (min-width: 960px){
+    .data-box--30{
+        grid-column: span 2;
+    }
+}
+
+@media screen and (min-width: 1170px){
+    .data-box--30{
+        grid-column: span 3;
+        grid-row: span 2;
+    }
+    .data-box--deaths, .data-box--confirmed, .data-box--abs, .data-box--vaccinated-day{
+        grid-column: span 2;
+    }
 }
 
 /**********************************/
