feito o modo noturno fds

--- a/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/css/styles.css
+++ b/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/css/styles.css
@@ -123,7 +123,7 @@ a{
     display: flex;
     align-items: center;
 }
-.switch_track{
+.switch__track{
     background-color: var(--clr-switch-track);
     display: block;
     height: 2rem;
@@ -132,7 +132,7 @@ a{
     cursor: pointer;
     margin: 0 .2rem;
 }
-.switch_track::before{
+.switch__track::before{
     content: "";
     background-color: var(--clr-font);
     transition: var(--transition);
@@ -144,9 +144,10 @@ a{
     left: 0;
 
 }
-.switch_track--dark::before{
-
+.switch__track--dark::before{
+ left: 2rem;
 }
+
 /**********************************/
 /* 3. Loading
 /**********************************/
